complete google home page replica

--- a/floogle/floogle-home.html
+++ b/floogle/floogle-home.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Indie+Flower&family=Monoton&family=Montez&family=Pacifico&family=Pangolin&family=Permanent+Marker&family=Press+Start+2P&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
 
+        <div class="nav-bar">
+            <div class="nav-left-bar">
+                <a href="#about#">About</a>
+                <a href="#store#">Store</a>
+            </div>
+            <div class="nav-right-bar">
+                <a href="#gmail#">Gmail</a>
+                <a href="#images#">Images</a>
+                <a href="#menu#"><i class="fa fa-th fa-lg " aria-hidden="true"></i></a>
+                <a href="#user#">
+                    <span class="fa-layers fa-fw">
+                        <i class="fas fa-circle fa-3x"></i>
+                        <span class="fa-layers-text fa-inverse fa-lg" style="margin-left: .65em;">L</span>
+                    </span>                    
+                </a>             
+            </div>
+        </div>
+
+        <div class="logo">
+            <a class="woogle-text" href="#google#">
+                <span id="woogle-text-style" style="color: #4285F4;">W</span>
+                <span id="woogle-text-style" style="color: #DB4437;">O</span>
+                <span id="woogle-text-style" style="color: #F4B400;">O</span>
+                <span id="woogle-text-style" style="color: #4285F4;">G</span>
+                <span id="woogle-text-style" style="color: #0F9D58;">L</span>
+                <span id="woogle-text-style" style="color: #DB4437;">E</span>
+            </a>
+        </div>
+            
+        <div class="search-bar">
+            <input type="text" id="search-bar-text"/>
+            <!-- <i class="fas fa-search"></i>
+            <i class="fas fa-microphone"></i> -->
+        </div>
+
+        <div class="buttons-div">
+            <button>Woogle Search</button>
+            <button>I'm Feeling Lucky</button>
+        </div>
+
+        <div class="info-div">
+            <a href="#info#" id="info-div">Stay home. Save lives. Help stop coronavirus</a>
+        </div>
+
+        <div class="bottom-bar">
+            <div class="bottom-left-bar">
+                <a href="#adv#">Advertising</a>
+                <a href="#business#">Business</a>
+                <a href="#how-search-works#">How Search Works</a>
+            </div>
+            <div class="bottom-right-bar">
+                <a href="#privacy#">Privacy</a>
+                <a href="#terms#">Terms</a>
+                <a href="#settings#">Settings</a>
+            </div>
+        </div>
+
+    </body>
+
+</html>
