--- a/floogle/floogle-home.html
+++ b/floogle/floogle-home.html
@@ -6,6 +6,7 @@
         <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Indie+Flower&family=Monoton&family=Montez&family=Pacifico&family=Pangolin&family=Permanent+Marker&family=Press+Start+2P&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Woogle</title>
     </head>
     <body>
 
