styling change and host on github pages

--- a/forever22/home.html
+++ b/forever22/home.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Indie+Flower&family=Monoton&family=Montez&family=Pacifico&family=Pangolin&family=Permanent+Marker&family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Shop Forever 22</title>
+        <title>Shop Forever 22 for the latest trends and the best deals | Forever 22</title>
         <link rel="shortcut icon" href="images/favicon.ico" />
         <script type="text/javascript" src="script.js"></script>
     </head>
@@ -99,11 +100,11 @@
         </div>
 
         <div class="main-block-1">
-
+            <div class="half-line"></div>
         </div>
 
         <div class="main-block-2">
-            
+            <a href="#sale#"><div id="mb-2-ad">the basics stock-up sale <span>buy 3, get 30% off</span>&nbsp;&nbsp;&nbsp;<button>CODE: STOCKUP</button></div></a>
         </div>
         
         <div class="main-block-3">
