--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<h2>Site Recreations</h2>
+<a href="forever22/home.html"><h3>Forever 22</h3></a>
+<a href="floogle/floogle-home.html"><h3>Woogle</h3></a>
 </body>
 </html>
