fixed logo covers

--- a/floogle/floogle-home.html
+++ b/floogle/floogle-home.html
@@ -31,11 +31,11 @@
         <div class="logo">
             <a class="woogle-text" href="#google#">
                 <span id="woogle-text-style" style="color: #4285F4;">W</span>
-                <span id="woogle-text-style" style="color: #DB4437;">O</span>
+                <span id="woogle-text-style" style="color: #EA5647;">O</span>
                 <span id="woogle-text-style" style="color: #F4B400;">O</span>
                 <span id="woogle-text-style" style="color: #4285F4;">G</span>
-                <span id="woogle-text-style" style="color: #0F9D58;">L</span>
-                <span id="woogle-text-style" style="color: #DB4437;">E</span>
+                <span id="woogle-text-style" style="color: #59AE5D;">L</span>
+                <span id="woogle-text-style" style="color: #EA5647;">E</span>
             </a>
         </div>
             
